--- a/etc/nginx/german.conf
+++ b/etc/nginx/german.conf
@@ -1,1 +1,41 @@
+server {
+    listen 80;
 
+    server_name german.local;
+    server_name_in_redirect off;
+
+    access_log /var/log/nginx/german.access.log;
+    error_log /var/log/nginx/german.error.log;
+
+    rewrite_log on;
+
+    root /home/web/german/;
+
+    location /static/ {
+        alias /home/web/german/static/;
+    }
+
+    location /uploads/ {
+        alias /home/web/german/uploads/;
+    }
+
+    location / {
+        uwsgi_pass unix:///var/run/uwsgi/german;
+        include uwsgi_params;
+        uwsgi_send_timeout 3000;
+        uwsgi_read_timeout 3000;
+        uwsgi_buffers 8 128k;
+    }
+
+    location ~ /\. {
+        access_log off;
+        log_not_found off;
+        deny all;
+    }
+
+    location ~* \.(?:ico|ico|css|js|jpe?g|JPG|png|svg|woff)$ {
+        access_log        off;
+        log_not_found     off;
+        expires 365d;
+    }
+}
